연습합니다

--- a/chat.html
+++ b/chat.html
@@ -45,7 +45,7 @@ aside { width:35%; float:right; background-color:#bac }
 
 <div id="wPaint1" style="position:absolute; top:600px; width:500px; height:300px; background:#CACACA; border:solid black 1px;"></div>
 <div id="fillColorPicker"></div>
-<div id="strokeColorPicker"></div>
+<div id="strokeColorPicker">aspdma;ksdm</div>
 
 </body>
 
