방방으로 바꿈.

--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@ aside { width:35%; float:right; background-color:#bac }
 		<canvas id="canvas2" width="750px" height="500px" style="border:1px #ddd solid; position:absolute; top:40px; left:10px;"></canvas>
 	</section>
 	<aside>
-		방<input id="room_name" type="text"><br/>
+		방방<input id="room_name" type="text"><br/>
 		<input type="button" onclick="set_room()" value="방선택"/>
 		이름<input id="user_name" type="text"><br/>
 		<input id="input" onkeydown="if (event.keyCode == 13) send()" type="message">
